20220304 웹 로그인페이지 완성

--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -1,6 +1,6 @@
 <div class="mt-4 p-5 bg-primary text-white rounded">
-    <h1>fwangjuwon</h1>
-    <p>0104782352354</p>
+    <h1>programmer</h1>
+    <p>01042436543</p>
   </div>
 
 </body>
