--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -15,7 +15,7 @@
             <input type="email" class="form-control" placeholder="Enter email" name="email">
           </div>
        
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Join</button>
       </form>
 <!-- 회원가입 폼 끝 -->
 
