--- a/src/main/resources/templates/user/detail.mustache
+++ b/src/main/resources/templates/user/detail.mustache
@@ -1,24 +1,21 @@
-{{> /layout/header}}
-
+{{>/layout/header}}
 <!-- 컨테이너 시작 -->
 <div class="container mt-3">
 
-    <!-- 상세정보보기 시작 -->
-
+    <!-- 회원 상세정보보기 폼 시작 -->
     <div class="mb-3 mt-3">
-        유저네임 자리
+        {{user.username}}
     </div>
     <div class="mb-3">
-        패스워드 자리
+        {{user.password}}
     </div>
     <div class="mb-3">
-        이메일 자리
+        {{user.email}}
     </div>
-    <a href="/user/1/updateForm" class="btn btn-primary">수정 페이지이동</a>
-
-    <!-- 상세정보보기 끝 -->
+    <a href="/user/{{user.id}}/updateForm" class="btn btn-primary">정보수정</a>
+    
+    <!-- 회원 상세정보보기 폼 끝 -->
 
 </div>
 <!-- 컨테이너 끝 -->
-
-{{> /layout/footer}}
+{{>/layout/footer}}
