--- a/src/main/resources/templates/user/detail.mustache
+++ b/src/main/resources/templates/user/detail.mustache
@@ -12,7 +12,7 @@
     <div class="mb-3">
         {{user.email}}
     </div>
-    <a href="/user/{{user.id}}/updateForm" class="btn btn-primary">정보수정</a>
+    <a href="/user/updateForm" class="btn btn-primary">정보수정</a>
     
     <!-- 회원 상세정보보기 폼 끝 -->
 
