--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -1,27 +1,25 @@
-{{>/layout/header}}
+{{> /layout/header}}
 
-<!-- 컨테이너시작 -->
+<!-- 컨테이너 시작 -->
 <div class="container mt-3">
 
-    <!-- 회원가입폼 시작 -->
+    <!-- 회원가입 폼 시작 -->
     <form action="/join" method="post">
         <div class="mb-3 mt-3">
-          <input type="text" class="form-control" placeholder="Enter username" name="username" required>
+            <input type="text" class="form-control" placeholder="Enter username" name="username" required>
         </div>
         <div class="mb-3">
-          <input type="password" class="form-control" placeholder="Enter password" name="password" required>
+            <input type="password" class="form-control" placeholder="Enter password" name="password" required
+                maxlength="12">
         </div>
         <div class="mb-3">
             <input type="email" class="form-control" placeholder="Enter email" name="email">
-          </div>
-       
-        <button type="submit" class="btn btn-primary">Join</button>
-      </form>
-<!-- 회원가입 폼 끝 -->
+        </div>
+        <button type="submit" class="btn btn-dark">회원가입</button>
+    </form>
+    <!-- 회원가입 폼 끝 -->
 
 </div>
 <!-- 컨테이너 끝 -->
 
 {{> /layout/footer}}
-
-
