--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -10,12 +10,12 @@
             <input type="text" class="form-control" value="{{principal.username}}" id="username" readonly>
         </div>
         <div class="mb-3">
-            <input type="password" class="form-control" value="{{principal.password}}" id="password"required>
+            <input type="password" class="form-control" value="{{principal.password}}" id="password" required>
         </div>
         <div class="mb-3">
             <input type="email" class="form-control" value="{{principal.email}}" id="email" required>
         </div>
-        <button type="button" class="btn btn-primary" onclick="update()">수정완료</button>
+        <button type="button" class="btn btn-dark" onclick="update()">수정완료</button>
     </form>
     <!-- 회원수정 폼 끝 -->
 
