--- a/src/main/resources/templates/post/detail.mustache
+++ b/src/main/resources/templates/post/detail.mustache
@@ -6,13 +6,13 @@
     <!-- 상세정보보기 시작 -->
 
     <div class="mb-3 mt-3">
-        {{post.user.username}}
+        작성자: {{post.user.username}}
     </div>
     <div class="mb-3">
-        {{post.title}}
+        제목: {{post.title}}
     </div>
     <div class="mb-3">
-        {{post.content}}
+        내용: {{post.content}}
     </div>
     <a href="/s/post/{{post.id}}/updateForm" class="btn btn-dark">수정 페이지이동</a>
 
