--- a/src/main/resources/templates/post/writeForm.mustache
+++ b/src/main/resources/templates/post/writeForm.mustache
@@ -12,7 +12,7 @@
            <textarea name="content"  rows="10" class="form-control"></textarea>
         </div>
         <button type="submit" class="btn btn-dark">글 쓰기</button>
-    </form>bnv  
+    </form>
     <!-- 글쓰기 폼 끝 -->
 
 </div>
