--- a/src/main/resources/templates/post/list.mustache
+++ b/src/main/resources/templates/post/list.mustache
@@ -1,33 +1,37 @@
-{{>/layout/header}}
+{{> /layout/header}}
 
-
-
-<!-- 컨테이너시작 -->
+<!-- 컨테이너 시작 -->
 <div class="container mt-3">
-
-  현재 페이지 번호: {{posts.number}}<br/>
-  첫 페이지: {{posts.first}}<br/>
-  마지막 페이지: {{posts.last}}<br/>
 
     <!-- 게시글 아이템 시작 -->
     {{#posts.content}}
     <div class="card mb-3">
         <div class="card-body">
-          <h4 class="card-title">{{title}} </h4>
-          <a href="/post/{{id}}" class="btn btn-primary">상세보기</a>
+            <h4 class="card-title">{{title}}</h4>
+            <a href="/post/{{id}}" class="btn btn-secondary">상세보기</a>
         </div>
-      </div>
-      {{/posts.content}}
-      <!-- 게시글 아이템 끝 -->
+    </div>
+    {{/posts.content}}
+    <!-- 게시글 아이템 끝 -->
 
-      <ul class="pagination justify-content-center"> 
-          <li class="page-item {{#posts.first}} disabled {{/posts.first}}"><a class="page-link" href="?page={{prevPage}}">이전</a></li>
-          <li class="page-item {{#posts.last}} disabled {{/posts.last}}"><a class="page-link" href="?page={{nextPage}}">다음</a></li>
-        </ul>
+    <ul class="pagination justify-content-center">
+        {{#posts.first}}
+        <li class="page-item disabled"><a class="page-link" href="?page={{prevPage}}">이전</a></li>
+        {{/posts.first}}
+        {{^posts.first}}
+        <li class="page-item"><a class="page-link" href="?page={{prevPage}}">이전</a></li>
+        {{/posts.first}}
+
+
+        {{#posts.last}}
+        <li class="page-item disabled"><a class="page-link" href="?page={{nextPage}}">다음</a></li>
+        {{/posts.last}}
+        {{^posts.last}}
+        <li class="page-item"><a class="page-link" href="?page={{nextPage}}">다음</a></li>
+        {{/posts.last}}
+    </ul>
 
 </div>
 <!-- 컨테이너 끝 -->
 
 {{> /layout/footer}}
-
-
