--- a/src/main/resources/templates/post/detail.mustache
+++ b/src/main/resources/templates/post/detail.mustache
@@ -13,7 +13,7 @@
     </div>
     <hr />
     <div class="mb-3">
-        {{post.content}}
+        {{{post.content}}}
     </div>
     <a href="/s/post/{{post.id}}/updateForm" class="btn btn-secondary">수정</a>
     <button class="btn btn-danger" id="btn-delete">삭제</button>
