20220318 24. 스크립트 공격 막기

--- a/src/main/resources/templates/post/updateForm.mustache
+++ b/src/main/resources/templates/post/updateForm.mustache
@@ -20,6 +20,11 @@
 
 </div>
 <!-- 컨테이너 끝 -->
+<script>
+    $("#content").summernote({
+        height: 500
+    });
+</script>
 
 <script>
     async function update() {
